# snippets_challenge

./: README.md  main.py  pyproject.toml  requirements.txt
